[package]
name = "grr-2d"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grr = { path = "../../repository/grr" } # "0.7"

[dev-dependencies]
glutin = "0.21"
rand = "0.7"
ttf-parser = "0.2"
nalgebra-glm = "0.3"
glyph_brush_layout = "0.1"
rusttype = "0.8.2"