[package]
name = "grr-2d"
version = "0.1.0"
authors = ["msiglreith <m.siglreith@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grr = { git = "https://github.com/msiglreith/grr.git", rev = "31504264d981957e0c633a60c8564a43ce351147" }
nalgebra-glm = "0.3"
glyph_brush_layout = "0.1"
rusttype = "0.8.2"
half = "1.4"
lyon_geom = "0.15"
allsorts = "0.3"
glutin = "0.21"
winit = "0.21"
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs.git", rev = "82aff01" }
zerocopy = "0.2"

[dev-dependencies]
rand = "0.7"
random_color = "0.4"
